--- a/CCTA 2023/exo_urdf.ipynb
+++ b/CCTA 2023/exo_urdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,18 @@
      "output_type": "stream",
      "text": [
       "model name: EXO_TAO\n",
-      "q: [-0.53901383  0.6294827 ]\n",
+      "q: [0 0]\n",
       "universe                 :  0.00  0.00  0.00\n",
       "r_bar                    :  0.00  0.00  0.84\n",
-      "r_knee                   :  0.24 -0.22  0.48\n"
+      "r_knee                   :  0.24 -0.00  0.42\n"
      ]
     }
    ],
    "source": [
     "import pinocchio as pin\n",
+    "import numpy as np\n",
     "\n",
-    " \n",
     "urdf_filename = \"Exo/description.urdf\"\n",
-    " \n",
     "model    = pin.buildModelFromUrdf(urdf_filename)\n",
     "\n",
     "print('model name: ' + model.name)\n",
@@ -32,6 +31,8 @@
     " \n",
     "# Sample a random configuration\n",
     "q        = pin.randomConfiguration(model)\n",
+    "# q        = np.array([0.1,0.2])\n",
+    "vq        = np.array([0,0])\n",
     "print('q: %s' % q.T)\n",
     " \n",
     "# Perform the forward kinematics over the kinematic tree\n",
@@ -47,22 +48,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[  R =\n",
+       " 1 0 0\n",
+       " 0 1 0\n",
+       " 0 0 1\n",
+       "   p = 0 0 0,\n",
+       "   R =\n",
+       "           1           0           0\n",
+       "           0   -0.999999 -0.00159265\n",
+       "           0  0.00159265   -0.999999\n",
+       "   p =    0    0 0.84,\n",
+       "   R =\n",
+       "           1           0           0\n",
+       "           0   -0.999999 -0.00159265\n",
+       "           0  0.00159265   -0.999999\n",
+       "   p =        0.235 -0.000668914     0.420001]"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.oMi.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0.]\n",
-      " [0. 0.]]\n"
+      "[[0.3764 0.1   ]\n",
+      " [0.1    0.1   ]]\n",
+      "[[ 0.          0.        ]\n",
+      " [ 0.36255658  0.        ]\n",
+      " [-0.21202058  0.        ]\n",
+      " [ 0.2882      0.1       ]\n",
+      " [-0.11350984 -0.00161817]\n",
+      " [-0.13465361 -0.1414121 ]]\n",
+      "[[ 0.         -0.        ]\n",
+      " [ 0.84        0.47744342]\n",
+      " [ 0.          0.21202058]\n",
+      " [ 1.          1.        ]\n",
+      " [ 0.          0.        ]\n",
+      " [ 0.          0.        ]]\n"
      ]
     }
    ],
    "source": [
-    "M = pin.crba(model,data,q)\n",
+    "# pin.crba(model,data,q)\n",
+    "# pin.computeJointJacobians(model,data)\n",
+    "pin.computeAllTerms(model,data,q,vq)\n",
     "\n",
-    "print(M)"
+    "print(data.M)\n",
+    "print(data.Ag)\n",
+    "print(data.J)\n",
+    "\n"
    ]
   }
  ],
@@ -87,7 +139,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7f144224a730efb5801b926e79b6069c2c530759e5578718ec165151cd646f51"
+    "hash": "40b974603b1ff0f565499a6dc1829967c96b73c5a0c12b592db40a3c31e8ed61"
    }
   }
  },
