--- a/CCTA 2023/exo_simulator.ipynb
+++ b/CCTA 2023/exo_simulator.ipynb
@@ -2,40 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of utils.waves failed: AttributeError: 'Add' object has no attribute 'sin'\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/user/Yecid/python/env_robot/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/user/Yecid/python/env_robot/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/usr/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"/home/user/Yecid/Articulos/repo_papers/CCTA 2023/utils/waves.py\", line 69, in <module>\n",
-      "    print(WAVES[\"SIN\"].y(2))\n",
-      "  File \"/home/user/Yecid/Articulos/repo_papers/CCTA 2023/utils/waves.py\", line 44, in y\n",
-      "    return self.lambda_y(*arg)\n",
-      "  File \"<lambdifygenerated-124>\", line 2, in _lambdifygenerated\n",
-      "    return A*sin(D + 6.28318530717959*F*t)\n",
-      "TypeError: loop of ufunc does not support argument 0 of type Add which has no callable sin method\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%reload_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
     "from utils.waves import *\n",
     "import pinocchio as pin\n",
     "from pinocchio.utils import *\n",
@@ -58,12 +31,12 @@
     "CONFIG['active_joints'] = np.array([1,1,0,1])\n",
     "\n",
     "CONSTANTS = {}\n",
-    "CONSTANTS[\"cm\"] = 1/2.54\n"
+    "CONSTANTS[\"cm\"] = 1/2.54"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +48,6 @@
     }
    ],
    "source": [
-    "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
@@ -127,6 +99,10 @@
     "active_joints = CONFIG['active_joints']\n",
     "\n",
     "\n",
+    "sin1 = cloneWave(WAVES[\"SIN\"])\n",
+    "sin1.set_constants((A,0.2),(F,1),(D,0))\n",
+    "sin1.set_limits((1,4))\n",
+    "\n",
     "t = np.linspace(0,5,int(5/dt))\n",
     "log_q       = np.empty((4,t.shape[0]))\n",
     "log_q_des   = np.empty((4,t.shape[0]))\n",
@@ -134,9 +110,9 @@
     "for i,t_cur in enumerate(t):\n",
     "\n",
     "    \n",
-    "    q_des[1] = WAVES[\"SIN\"].y(t_cur,.2,2,0)\n",
-    "    qd_des[1] = WAVES[\"SIN\"].yd(t_cur,.2,2,0)\n",
-    "    qdd_des[1] = WAVES[\"SIN\"].ydd(t_cur,.2,2,0)\n",
+    "    q_des[1] = sin1.y(t_cur); WAVES[\"SIN\"].y(t_cur,.2,2,0)\n",
+    "    qd_des[1] = sin1.yd(t_cur); WAVES[\"SIN\"].yd(t_cur,.2,2,0)\n",
+    "    qdd_des[1] = sin1.ydd(t_cur); WAVES[\"SIN\"].ydd(t_cur,.2,2,0)\n",
     "\n",
     "    q_des[3] = fnc_q_des(t_cur)\n",
     "    qd_des[3] = fnc_qd_des(t_cur)\n",
@@ -216,7 +192,7 @@
     "              \"#FFC312\",\n",
     "              \"#009432\")\n",
     "\n",
-    "    plt.rcParams[\"text.usetex\"] = True\n",
+    "    # plt.rcParams[\"text.usetex\"] = True\n",
     "    labels = (r\"$\\phi_{hr}$\",r\"$\\phi_{kr}$\",r\"$\\phi_{hl}$\",r\"$\\phi_{kl}$\")\n",
     "\n",
     "    lines = []\n",
@@ -259,6 +235,26 @@
     "if FLAG.get(\"SAVE_FIGURE\",False):\n",
     "    fig.savefig(figname,dpi=1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.002002002002002"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_cur"
+   ]
   }
  ],
  "metadata": {
@@ -282,7 +278,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7f144224a730efb5801b926e79b6069c2c530759e5578718ec165151cd646f51"
+    "hash": "40b974603b1ff0f565499a6dc1829967c96b73c5a0c12b592db40a3c31e8ed61"
    }
   }
  },
